--- a/gb/21/7/18/n13096958.md
+++ b/gb/21/7/18/n13096958.md
@@ -1,15 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/sxvshi319/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/sxvshi319/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/sxvshi319/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/sxvshi319/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/sxvshi319/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/sxvshi319/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/sxvshi319/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/sxvshi319/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/sxvshi319/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/sxvshi319/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/sxvshi319/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/sxvshi319/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/sxvshi319/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/sxvshi319/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/sxvshi319/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/sxvshi319/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/sxvshi319/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/sxvshi319/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/sxvshi319/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/sxvshi319/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/sxvshi319/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/sxvshi319/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/sxvshi319/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/sxvshi319/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/auytan380/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/auytan380/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/auytan380/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/auytan380/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/auytan380/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/auytan380/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/auytan380/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/auytan380/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/auytan380/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/auytan380/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/auytan380/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/auytan380/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/auytan380/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/auytan380/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/auytan380/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>挡紫光入股IC业 逾500学者如唐吉诃德</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/07/id13096960-507392-600x400.jpg" />
 <h6>在紫光集团与中共的威逼下，台湾一度想开放中资入股IC产业。图为紫光集团的产品。（STR/AFP via Getty Images）
 </h6>
 <hr>
-<p>【大纪元2021年07月18日讯】（大纪元记者张原彰台湾台北报导）中国最大的半导体企业<ahref="https://github.com/sxvshi319/djy/blob/master/gb/tag/%E7%B4%AB%E5%85%89.md#1">紫光</a>集团近期无力清偿到期的债券，向法院声请破产。住在加拿大的注册会计师张尧在其YouTube频道里提到，在紫光集团与中共的威逼下，台湾一度想开放<ahref="https://github.com/sxvshi319/djy/blob/master/gb/tag/%E4%B8%AD%E8%B5%84.md#1">中资</a>入股IC产业，所幸在2015年时，被台湾五百多名学者联署挡下，否则现在台湾的护国群山可能就不在了，“这些人可说是现代版的唐吉诃德。”</p>
-<p>关于<ahref="https://github.com/sxvshi319/djy/blob/master/gb/tag/%E7%B4%AB%E5%85%89.md#1">紫光</a>向法院声请破产一事，紫光公司日前公告证实，已收到北京市第一中级人民法院的通知书。张尧说，紫光集团嚣张没有落魄的久，虽然中共宣称将再加码500亿人民币投资紫光，“不知道这些钱够烧多久。”</p>
+<p>【大纪元2021年07月18日讯】（大纪元记者张原彰台湾台北报导）中国最大的半导体企业<ahref="https://github.com/auytan380/djy/blob/master/gb/tag/%E7%B4%AB%E5%85%89.md#1">紫光</a>集团近期无力清偿到期的债券，向法院声请破产。住在加拿大的注册会计师张尧在其YouTube频道里提到，在紫光集团与中共的威逼下，台湾一度想开放<ahref="https://github.com/auytan380/djy/blob/master/gb/tag/%E4%B8%AD%E8%B5%84.md#1">中资</a>入股IC产业，所幸在2015年时，被台湾五百多名学者联署挡下，否则现在台湾的护国群山可能就不在了，“这些人可说是现代版的唐吉诃德。”</p>
+<p>关于<ahref="https://github.com/auytan380/djy/blob/master/gb/tag/%E7%B4%AB%E5%85%89.md#1">紫光</a>向法院声请破产一事，紫光公司日前公告证实，已收到北京市第一中级人民法院的通知书。张尧说，紫光集团嚣张没有落魄的久，虽然中共宣称将再加码500亿人民币投资紫光，“不知道这些钱够烧多久。”</p>
 <p>张尧回忆紫光当年的发展状况，自2013年起大举收购全球半导体产业，但在2015年时踢到铁板，并购提议遭到美国的记忆体大厂美光以影响美国国安为由回绝，接着紫光把目光转向台湾。</p>
-<p>张尧说，紫光知道买美国半导体企业的管道将被堵死，因而开始瞄准台湾的半导体厂，紫光董事长赵伟国频频对台湾放话，包括：要求台湾开放<ahref="https://github.com/sxvshi319/djy/blob/master/gb/tag/%E4%B8%AD%E8%B5%84.md#1">中资</a>入股积体电路（IC）产业，否则要求中共拒买任何台湾的晶片产品，等于要全面封杀台湾的半导体产业。</p>
+<p>张尧说，紫光知道买美国半导体企业的管道将被堵死，因而开始瞄准台湾的半导体厂，紫光董事长赵伟国频频对台湾放话，包括：要求台湾开放<ahref="https://github.com/auytan380/djy/blob/master/gb/tag/%E4%B8%AD%E8%B5%84.md#1">中资</a>入股积体电路（IC）产业，否则要求中共拒买任何台湾的晶片产品，等于要全面封杀台湾的半导体产业。</p>
 <p>她说，当时是中国崛起论最兴盛的时候，这确实造成台湾部分半导体厂的恐慌，联发科甚至有些游移不定，有些台湾企业确实被迫退让。</p>
 <p>在2015年马习会之后，事情又有进一步发展，张尧说，在马习会结束后的那个年底，台湾经济部说要在任内开放中资进入台湾IC产业，“不晓得两件事有无关系。”</p>
 <p>她说，这件事激起台湾内部很大的反对，有超过500名学者、专家连署反对，最终阻挡成功。有学者提到，台湾无论设置多少防护措施，只要开放让中资进来，最终整个产业都会被中资主导。规则是给守规矩的国家遵守，但共产中国是不守规则的，只要开一个口，后果不堪设想。</p>
@@ -22,41 +22,46 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/19/12/27/n11748133.md#1">陈思敏：向日本国会议员行贿的中企有何背景</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/20/3/30/n11988591.md#1">债务是高收益债病毒 专家：分散风险为上策</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/20/10/7/n12458607.md#1">科技战冲击中国半导体业 台DRAM之父离开紫光</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/20/11/21/n12566285.md#1">【财商天下】债市连环违约 中企在美圈钱败退</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/20/12/10/n12611272.md#1">清华紫光集团近25亿美元债出现违约</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/21/1/4/n12666921.md#1">金言：展望2021 一瓶白酒撑起末日中国经济</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/21/3/26/n12837878.md#1">【财商天下】国企违约救不救 中共陷两难</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/21/4/2/n12854347.md#1">台媒：中资科企隐身台湾 伺机挖角或涉窃密</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/21/5/11/n12939517.md#1">台产学创新条例惹议 民团忧成中共窃密破口</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/21/7/15/n13089767.md#1">【网海拾贝】无视中共是自由社会最大危险</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/19/12/27/n11748133.md#1">陈思敏：向日本国会议员行贿的中企有何背景</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/20/3/30/n11988591.md#1">债务是高收益债病毒 专家：分散风险为上策</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/20/10/7/n12458607.md#1">科技战冲击中国半导体业 台DRAM之父离开紫光</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/20/11/21/n12566285.md#1">【财商天下】债市连环违约 中企在美圈钱败退</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/20/12/10/n12611272.md#1">清华紫光集团近25亿美元债出现违约</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/21/1/4/n12666921.md#1">金言：展望2021 一瓶白酒撑起末日中国经济</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/21/3/26/n12837878.md#1">【财商天下】国企违约救不救 中共陷两难</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/21/4/2/n12854347.md#1">台媒：中资科企隐身台湾 伺机挖角或涉窃密</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/21/5/11/n12939517.md#1">台产学创新条例惹议 民团忧成中共窃密破口</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/21/7/15/n13089767.md#1">【网海拾贝】无视中共是自由社会最大危险</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/4/n10361532.md#1" target="_blank">周晓辉：恩格斯资助马克思并为其顶包背后</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/9/14/n11521196.md#1" target="_blank">美重量级参议员 要求中共停止迫害法轮功</a></li>
+<li><a href="https://github.com/ychojm359/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/23/n10242561.md#1" target="_blank">袁斌：方志敏的“清贫”</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/16/n11262924.md#1" target="_blank">参加纽约大集会 意大利小伙子找到人生意义</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/20/3/16/n11945071.md#1">【新闻看点】官媒忙降温？赵立坚及五毛被打脸</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/20/3/16/n11943071.md#1">【现场视频】武汉医生揭中共关闭方舱内幕</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/20/3/15/n11942229.md#1">大陆原卫生高官：疫情恐再爆发 谎言将破灭</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/20/3/15/n11942675.md#1">任志强失联4天 其好友求救外媒向中共施压</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/20/3/16/n11945291.md#1">蓬佩奥与杨洁篪通话 正告北京勿散怪诞谣言</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/20/3/15/n11942589.md#1">赵立坚甩锅病毒源自美国 艺人黄秋生狠酸中共</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/20/3/15/n11942781.md#1">潘迎紫呼吸道感染急就医 被要求检测新冠病毒</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/20/3/15/n11942415.md#1">西班牙疫情大爆发 梁咏琪一家三口封城前返港</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/20/3/16/n11945468.md#1">赵丽颖复工晒片场照 吊超高威亚压根看不到人</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/20/3/11/n11933369.md#1">清朝学士三奇梦 是谁掌握他的一生？</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/20/1/2/n11764074.md#1">他们身上的毒疮 原来是夙怨</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/13/1/31/n3790016.md#1">米开朗基罗Michelangelo（1）早年生涯</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/20/3/7/n11923201.md#1">【历史回眸】抵抗极权 最简单的方法是拒绝说谎</a></li>
-<li><a href="https://github.com/sxvshi319/djy/blob/master/gb/20/3/6/n11920418.md#1">线条魔术家  白描大师李公麟和五马图</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/12/n13734778.md#1">【百年真相】替毛背锅“红色特工”潘汉年惨死</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/5/n13727490.md#1">【百年真相】密谋“金融政变” 肖建华将现身？</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/28/n13747559.md#1">一首名曲奏出大提琴前所未有的力量</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/29/n13748202.md#1">【未解之谜】通行灵界的科学家之二 天堂见闻</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/18/n13739799.md#1">【奇梦】姻缘天定 女子依梦得夫 男子依梦得妻</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/4/n13752411.md#1">【时事军事】苏-35S被米格-29击落 刺痛了谁？</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751943.md#1">【新闻看点】特斯拉裁员10% 全球大衰退将至？</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751784.md#1">中国最富城市之一深圳降薪 钱荒引爆民怨</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751624.md#1">中共吹嘘“最大常规航母” 分析：美国早已淘汰</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751705.md#1">外交人事洗牌 杨洁篪王毅继任人选引猜测</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751923.md#1">港星杨英伟出售千万房产 已举家移民奥地利</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751832.md#1">评论：《壮志凌云2》证明好莱坞无需中国市场</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751310.md#1">张娜拉6月底结婚 赞新郎笑容美好且诚实善良</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/2/n13751191.md#1">客串韩剧下周播 范冰冰晒运动瘦身照宣传造势</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/1/n13750400.md#1">这类人压力大却最长寿！3招抗压 远离衰老疾病</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/5/26/n13746023.md#1">腰痛是肾脏在求救？肾是沉默器官 4症状要警惕</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/1/n13750249.md#1">长白发原因不一定是衰老！2种方法白发变黑发</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751690.md#1">危险长新冠4类人警惕 疫苗也挡不住？1招改善</a></li>
+<li><a href="https://github.com/auytan380/djy/blob/master/gb/22/6/3/n13751309.md#1">研究发现人类肝脏永远年轻 只有不到三岁</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/sxvshi319/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/sxvshi319/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/7/18/n13096958.htm">挡紫光入股IC业 逾500学者如唐吉诃德</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/auytan380/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/auytan380/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/7/18/n13096958.htm">挡紫光入股IC业 逾500学者如唐吉诃德</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/sxvshi319/djy/blob/master/gb/21/7/18/n13096958.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/sxvshi319/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/sxvshi319/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/sxvshi319/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/sxvshi319/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/sxvshi319/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/auytan380/djy/blob/master/gb/21/7/18/n13096958.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/auytan380/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/auytan380/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/auytan380/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/auytan380/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/auytan380/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
